subiendo primeros cambios

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>tradersplanet-chatroom</title>
+    <script src="https://static.opentok.com/v2/js/opentok.min.js"></script>
   </head>
   <body>
     <noscript>
