--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,14 @@
 </head>
 
 <body>
+
   <noscript>
     <strong>We're sorry but tradersplanet doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <script src="https://kit.fontawesome.com/13e1d46b3b.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
